--- a/Cliente_web/Cliente_webFront/src/app/principal-page-users/principal-page-users.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page-users/principal-page-users.component.html
@@ -62,8 +62,8 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <p>Footer</p>
-      <h3>Este es el pie de página</h3>
+      <p>Página municipal de contratos</p>
+      <h3>Desarrollado por el Departamento de informática</h3>
     </footer>
 
   </div>
