--- a/Cliente_web/Cliente_webFront/src/app/ajustes-user/ajustes-user.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/ajustes-user/ajustes-user.component.html
@@ -5,12 +5,11 @@
   </header>
 
   <div class="content">
-    <p>Este solo es otro print de prueba</p>
-    <h3>Al igual que este</h3>
+    <h1>Esta funcionalidad estará disponible en futuras actualizaciones del sistema 😊👍</h1>
   </div>
 
   <footer class="footer">
-    <p>Footer</p>
-    <h3>Este es el pie de página</h3>
+    <p>Página municipal de contratos</p>
+    <h3>Desarrollado por el Departamento de informática</h3>
   </footer>
 </div>
