--- a/Cliente_web/Cliente_webFront/src/app/ajustes/ajustes.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/ajustes/ajustes.component.html
@@ -1,18 +1,12 @@
 <div class="main-container">
   <header class="search-bar">
-    <h1>Ajustes de Usuario</h1>
+    <h1>Ajustes de Administrador</h1>
     <button class="buttons" routerLink="/principalPage">Volver Principal</button>
   </header>
 
   <div class="content">
-    <h1>Cambiar imagen de la pestaña principal</h1>
-
-    <label>Ingrese la nueva URL de su imagen a elección:</label>
-    <input type="text">
-    <div style="height: 20px"></div>
-    <button class="buttons">Guardar nueva imagen</button>
-
-    <div style="height: 20px"></div>
+    <h1>Funcionalidad aún en etapa de prueba</h1>
+    <h2>Cambiar imagen de la pestaña principal</h2>
 
     <label>Añadir nueva imagen desde el escritorio:</label>
     <div style="height: 10px"></div>
@@ -34,7 +28,7 @@
   </div>
 
   <footer class="footer">
-    <p>Footer</p>
-    <h3>Este es el pie de página</h3>
+    <p>Página municipal de contratos</p>
+    <h3>Desarrollado por el Departamento de informática</h3>
   </footer>
 </div>
