--- a/Cliente_web/Cliente_webFront/src/app/notificaciones/notificaciones.component.css
+++ b/Cliente_web/Cliente_webFront/src/app/notificaciones/notificaciones.component.css
@@ -47,3 +47,42 @@
   border-top: 5px solid #FFD700;
   margin: -10px;
 }
+
+.table-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 20px; /* Agrega margen superior */
+}
+
+table {
+  width: 80%; /* Reduce el ancho para un diseño más estilizado */
+  border-collapse: collapse;
+  margin: 20px auto; /* Centra la tabla horizontalmente con margen */
+  background-color: #f8f9fa; /* Color de fondo sutil */
+  border-radius: 10px; /* Bordes redondeados */
+  overflow: hidden; /* Para evitar desbordes con los bordes redondeados */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Sombra elegante */
+}
+
+th, td {
+  padding: 12px;
+  text-align: center; /* Centrar contenido */
+  border: 1px solid #ddd; /* Bordes suaves */
+}
+
+th {
+  background-color: #3CB371; /* Color azul para encabezado */
+  color: #FFD700;
+  font-weight: bold;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2; /* Color alternativo para filas */
+}
+
+tr:hover {
+  background-color: #d6e4ff; /* Efecto hover */
+}
+
