Estilizando la página
+Los componentes de documentos, itos, resprecentantes han sufrido cambios en el html para mejorarle la apariencia.

--- a/Cliente_web/Cliente_webFront/src/app/documentos/documentos.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/documentos/documentos.component.html
@@ -93,8 +93,8 @@
     <input type="text" [(ngModel)]="nuevoDocumento.contrato">
 
     <div class="modal-buttons">
-      <button (click)="cerrarModalDocumentosCrear()">Cancelar</button>
-      <button (click)="crearDocumento()">Crear</button>
+      <button class="buttons" (click)="cerrarModalDocumentosCrear()">Cancelar</button>
+      <button class="buttons" (click)="crearDocumento()">Crear</button>
     </div>
   </div>
 </div>
@@ -120,8 +120,8 @@
     <input type="text" [(ngModel)]="nuevoDocumento.contrato">
 
     <div class="modal-buttons">
-      <button (click)="cancelarActualizacion()">Cancelar</button>
-      <button (click)="actualizarElDocumento()">Actualizar</button>
+      <button class="buttons" (click)="cancelarActualizacion()">Cancelar</button>
+      <button class="buttons" (click)="actualizarElDocumento()">Actualizar</button>
     </div>
   </div>
 </div>
@@ -136,8 +136,8 @@
       </li>
     </ul>
     <div class="botones">
-      <button (click)="cerrarModalEliminar()">Cancelar</button>
-      <button (click)="confirmarEliminacion()">Confirmar</button>
+      <button class="buttons" (click)="confirmarEliminacion()">Confirmar</button>
+      <button class="buttons" (click)="cerrarModalEliminar()">Cancelar</button>
     </div>
   </div>
 </div>
