Me falto arreglarle los botones al modal
+Le pude estilo al modal solamente

--- a/Cliente_web/Cliente_webFront/src/app/contratos/contratos.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/contratos/contratos.component.html
@@ -158,8 +158,8 @@
     </div>
 
     <div class="modalEditar-footer">
-      <button (click)="actualizarElContrato()">Actualizar</button>
-      <button (click)="cancelarActualizacion()">Cancelar</button>
+      <button class="buttons" (click)="actualizarElContrato()">Actualizar</button>
+      <button class="buttons" (click)="cancelarActualizacion()">Cancelar</button>
     </div>
   </div>
 </div>
